--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/moment": "^2.13.0",
     "express": "^4.18.1",
     "moment": "^2.29.3",
+    "piscina": "^3.2.0",
     "ts-node": "^10.7.0"
   }
 }
